fixed post ui to minimize whitespace and maximize readability

--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -54,7 +54,8 @@
       max-width: 38em;
       min-width: 45%;
       max-width: 38rem;
-      margin: 4vw;
+      margin-left: 4vw;
+      margin-top: 5vh;
       max-height: calc(100% - 1em);
     }
   }
