--- a/src/styles/Post.css
+++ b/src/styles/Post.css
@@ -66,6 +66,6 @@
 }
 
 .content {
-    font-size: 1.1em;
+    font-size: 1em;
     color: rgb(32, 32, 32)
 }
